[package]
name = "everyday_macros"
version = "0.1.0"
authors = ["Pegleg <pegleg@linux.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
description = "This crate contains all the procedural macros you might use in your everyday life while coding. Things like a thread sleep timer or a retry on error."
homepage = "https://github.com/P3GLEG/everyday_macros"
documentation = "https://docs.rs/everyday_macros"
repository = "https://github.com/P3GLEG/everyday_macros"
readme = "README.md"
keywords = ["proc-macro", "procedural"]
categories = ["macro-utilities"]

[dependencies]
proc-macro2 = "1.0.24"
syn = { version = "1.0.55", features=["parsing", "extra-traits"] }
quote = "1.0.8"
tokio = { version = "1.0", features=["time"] }
rand = "0.8.0"

[lib]
proc-macro = true

[dev-dependencies]
tokio = { version = "1.0", features=["rt", "macros"] }

[package.metadata.docs.rs]
all-features = true
